--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "bootstrap-icons": "^1.5.0",
         "eslint-plugin-prettier": "^3.4.1",
         "lodash": "^4.17.15",
+        "nanoid": "^4.0.0",
         "prop-types": "^15.7.2",
         "query-string": "^7.1.1",
         "react": "^18.2.0",
