--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@mui/material": "^5.10.5",
+        "@reduxjs/toolkit": "^1.9.1",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
@@ -17,6 +18,7 @@
         "query-string": "^7.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "react-select": "^5.1.0",
