--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "axios": "^1.2.0",
         "bootstrap": "^5.1.0",
         "bootstrap-icons": "^1.5.0",
-        "eslint-plugin-prettier": "^3.4.1",
         "history": "^4.9.0",
         "lodash": "^4.17.15",
         "nanoid": "^4.0.0",
@@ -54,12 +53,15 @@
     "devDependencies": {
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-prettier": "^8.6.0",
         "eslint-config-standard": "^16.0.3",
         "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-promise": "^5.1.0",
         "eslint-plugin-react": "^7.25.1",
-        "eslint-plugin-react-hooks": "^4.2.0"
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "prettier": "^2.8.2"
     }
 }
